fix vertical align for texts in bottom navigation menu

--- a/src/components/navigation/nav.less
+++ b/src/components/navigation/nav.less
@@ -25,12 +25,13 @@
 	bottom: 0;
 }
 .link {
-	padding: 0.4rem 0;
+	padding: 0.4rem 0 0.2rem;
 	display: flex;
 	flex-grow: 1;
 	width: 4.5rem;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 	text-decoration: none;
 	font-weight: 500;
 	font-size: 0.7rem;
@@ -61,6 +62,7 @@
 	flex-direction: column;
 	align-items: center;
 	text-decoration: none;
+	text-align: center;
 	color: white;
 	font-size: 0.7rem;
 	font-weight: 500;
